--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,10 @@ jobs:
           cache: 'pnpm'
 
       - name: Install pnpm
-        run: corepack enable && pnpm --version
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Run lint-staged
         run: npx lint-staged
