--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "@gland/common",
-  "version": "1.0.0",
+  "name": "@glandjs/common",
+  "version": "1.0.0-alpha.1",
   "author": "Mahdi",
   "license": "MIT",
   "scripts": {
     "build": "tsc"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@medishn/toolkit": "^1.0.3",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tslib": "2.8.1"
   }
 }
