--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,9 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
+    "types": ["node"],
+    "outDir": ".",
     "rootDir": ".",
-    "outDir": "."
+    "paths": {}
   },
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"],
-  "include": ["**/*.ts"]
+  "references": []
 }
