--- a/packages/http/tsconfig.json
+++ b/packages/http/tsconfig.json
@@ -1,22 +1,30 @@
 {
-  "extends": "../../tsconfig.json",
-
+  "extends": "../tsconfig.json",
   "compilerOptions": {
+    "outDir": ".",
     "rootDir": ".",
-    "outDir": "."
+    "paths": {
+      "@glandjs/common": ["../common"],
+      "@glandjs/common/*": ["../common/*"],
+      "@glandjs/core": ["../core"],
+      "@glandjs/core/*": ["../core/*"],
+      "@glandjs/events": ["../events"],
+      "@glandjs/events/*": ["../events/*"]
+    },
+    "types": ["node"]
   },
   "files": [],
   "include": ["**/*.ts"],
   "exclude": ["node_modules"],
   "references": [
     {
-      "path": "../common"
+      "path": "../common/tsconfig.json"
     },
     {
-      "path": "../core"
+      "path": "../core/tsconfig.json"
     },
     {
-      "path": "../events"
+      "path": "../events/tsconfig.json"
     }
   ]
 }
