chore(core): The reflect-metadata package was changed to @glandjs/common and moved to peerDependencies along with @glandjs/common. A readme.md file was also created and added to @glandjs/core.

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,9 +7,7 @@
       "@glandjs/common": ["../common"],
       "@glandjs/common/*": ["../common/*"],
       "@glandjs/events": ["../events"],
-      "@glandjs/events/*": ["../events/*"],
-      "@glandjs/http": ["../http"],
-      "@glandjs/http/*": ["../http/*"]
+      "@glandjs/events/*": ["../events/*"]
     },
     "types": ["node"]
   },
@@ -22,9 +20,6 @@
     },
     {
       "path": "../events/tsconfig.json"
-    },
-    {
-      "path": "../http/tsconfig.json"
     }
   ]
 }
