--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -13,14 +13,17 @@
     "access": "public"
   },
   "dependencies": {
-    "@glandjs/common": "workspace:*",
     "@glandjs/core": "workspace:*",
     "@glandjs/events": "workspace:*",
     "@medishn/toolkit": "^1.0.3",
-    "reflect-metadata": "^0.2.2",
     "tslib": "2.8.1"
   },
   "devDependencies": {
+    "@glandjs/common": "workspace:*",
     "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "@glandjs/common": "workspace:*",
+    "reflect-metadata": "^0.1.12"
   }
 }
