--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glandjs/common",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.1-alpha",
   "description": "Glands is a web framework for Node.js (@common)",
   "homepage": "https://github.com/glandjs/gland#readme",
   "author": "Mahdi",
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://github.com/glandjs/gland.git",
     "directory": "packages/common"
+  },
+  "engines": {
+    "node": ">= 20"
   },
   "scripts": {
     "build": "tsc"
