--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,13 +1,20 @@
 {
   "name": "@glandjs/core",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.1-alpha",
+  "description": "Glands is a web framework for Node.js (@core)",
+  "homepage": "https://github.com/glandjs/gland#readme",
   "author": "Mahdi",
   "license": "MIT",
-  "engines": {
-    "node": ">= 20"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/glandjs/gland.git",
+    "directory": "packages/core"
   },
   "scripts": {
     "build": "tsc"
+  },
+  "engines": {
+    "node": ">= 20"
   },
   "publishConfig": {
     "access": "public"
