--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@glandjs/events",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.1-alpha",
+  "description": "Glands is a web framework for Node.js (@events)",
+  "homepage": "https://github.com/glandjs/gland#readme",
   "author": "Mahdi",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/glandjs/gland.git",
+    "directory": "packages/events"
+  },
   "engines": {
     "node": ">= 20"
   },
