--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -27,6 +27,6 @@
     "tslib": "2.8.1"
   },
   "peerDependencies": {
-    "reflect-metadata": "^0.1.12"
+     "reflect-metadata": "^0.1.12 || ^0.2.0"
   }
 }
