chore: update package.json for beta release
- Changed version to 1.0.0-beta for the upcoming beta release
- Added new keywords to reflect the core features of the framework
- Updated Node.js engine requirement to >=20.0.0
- Added TypeScript engine requirement to >=5.0.0
- Modified `workspaces` and added `files` field to include only necessary packages
- Improved script section with new commands: `dev`, `watch`, `clean`, `typecheck`, `lint:fix`, `coverage`, and `prepare`
- Added coverage reporting via NYC for test results
- Updated dependencies: added `@glandjs/events` with a specific beta version
- Added Husky hooks initialization with `prepare` script
- Updated `lint-staged` configuration for prettier formatting
- Enhanced `release` scripts with support for various release tags: alpha, beta, next
- Removed deprecated `prebuild` and replaced it with `typecheck` for better type safety

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "strictPropertyInitialization": false,
     "noLib": false
   },
-  "include": ["packages/**/*", "test/**/*", "examples/**/*"],
+  "include": ["packages/**/*"],
   "compileOnSave": true,
   "buildOnSave": true,
   "preserveSymlinks": true,
