--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,32 +1,46 @@
 {
   "name": "@glandjs/common",
-  "version": "1.0.1-alpha",
+  "version": "1.0.0-beta",
   "description": "Glands is a web framework for Node.js (@common)",
-  "homepage": "https://github.com/glandjs/gland#readme",
-  "author": "Mahdi",
+  "author": "Mahdi <bitsgenix@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/glandjs/gland#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/glandjs/gland.git",
-    "directory": "packages/common"
+    "url": "https://github.com/glandjs/gland.git"
   },
   "engines": {
-    "node": ">= 20"
+    "node": ">= 20",
+    "typescript": ">=5"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist *.d.ts *.js",
+    "typecheck": "tsc --noEmit",
+    "dev": "tsc --watch"
   },
+  "keywords": [
+    "gland",
+    "glandjs",
+    "common",
+    "nodejs",
+    "typescript",
+    "decorators",
+    "interfaces",
+    "utilities",
+    "modular"
+  ],
   "publishConfig": {
     "access": "public"
-  },
-  "devDependencies": {
-    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@medishn/toolkit": "^1.0.3",
     "tslib": "2.8.1"
   },
   "peerDependencies": {
-     "reflect-metadata": "^0.1.12 || ^0.2.0"
+    "reflect-metadata": "^0.1.12 || ^0.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.4"
   }
 }
