--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@glandjs/events": "1.0.2-beta",
+    "@glandjs/events": "1.1.0",
     "@medishn/toolkit": "^1.0.3",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
