--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glandjs/common",
-  "version": "1.0.2-beta",
+  "version": "1.0.3-beta",
   "description": "Glands is a web framework for Node.js (@common)",
   "author": "Mahdi <bitsgenix@gmail.com>",
   "license": "MIT",
@@ -38,7 +38,7 @@
     "tslib": "2.8.1"
   },
   "peerDependencies": {
-    "reflect-metadata": "^0.1.12 || ^0.2.0"
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
