--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glandjs/core",
-  "version": "1.0.2-beta",
+  "version": "1.0.3-beta",
   "description": "Glands is a web framework for Node.js (@core)",
   "author": "Mahdi <bitsgenix@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
   },
   "peerDependencies": {
     "@glandjs/common": "workspace:*",
-    "reflect-metadata": "^0.1.12 || ^0.2.0"
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@glandjs/common": "workspace:*",
